Revision history for Perl extension Dist-Zilla-PluginBundle-Author-ZOFFIX

1.001003   2014-02-01
    - Fixes Issue #1 (Missing prepreqs for plugins in the bundle)
       https://github.com/zoffixznet/Dist-Zilla-PluginBundle-Author-ZOFFIX/issues/1

1.001002   2014-01-26
    - Removed 'fatal' option from PromptIfStale plugin
    - Removed CopyFilesFromRelease's LICENSE and CONTRIBUTING, as it
      was causing some conflicts I don't wanna mess around with right now

1.001001   2014-01-26
    - First version, released on an unsuspecting world